--- a/apps/docs/src/app/components/footer/footer.component.html
+++ b/apps/docs/src/app/components/footer/footer.component.html
@@ -7,7 +7,8 @@
       ><button mat-icon-button><img src="./assets/social/twitter.png" /></button
     ></a>
     <a href="https://stackoverflow.com/users/8808496/ngfelixl"
-      ><button mat-icon-button><img src="./assets/social/stackoverflow.png" /></button
+      ><button mat-icon-button>
+        <img src="./assets/social/stackoverflow.png" /></button
     ></a>
   </div>
   <div class="copyright">
