--- a/apps/docs/src/app/components/home/home.component.html
+++ b/apps/docs/src/app/components/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="jumbotron">
   <span class="title">Angular Pro Widgets</span><br /><br />
-  <button mat-flat-button color="primary" routerLink="installation">Get Started</button>
+  <button mat-flat-button color="primary" routerLink="installation">
+    Get Started
+  </button>
 </div>
 
 <div class="preview">
@@ -15,16 +17,15 @@
       ></pro-gauge>
     </div>
     <div class="description">
-      Highly customizable and responsive svg widgets for easy usage with Angular.
-      <p>
-        <a routerLink="/widgets/gauge">Test it yourself</a>
-      </p>
+      Highly customizable and responsive svg widgets for easy usage with
+      Angular.
+      <p><a routerLink="/widgets/gauge">Test it yourself</a></p>
     </div>
   </div>
   <div class="entry second">
     <div class="description">
-      Feet the widgets simply with input property bindings and make use of Angulars async pipe for your data streams.
-      <br /><br />
+      Feet the widgets simply with input property bindings and make use of
+      Angulars async pipe for your data streams. <br /><br />
       More widgets comming soon.
     </div>
     <div class="demo">
