--- a/apps/docs/src/app/components/installation/installation.component.html
+++ b/apps/docs/src/app/components/installation/installation.component.html
@@ -7,7 +7,10 @@
 
   <pre class="code">npm install pro-widgets</pre>
 
-  <p>Then you can either import all of the Widgets by importing the WidgetsModule.</p>
+  <p>
+    Then you can either import all of the Widgets by importing the
+    WidgetsModule.
+  </p>
 
   <pre class="code">import &#123; WidgetsModule &#125; from 'pro-widgets'</pre>
 
@@ -18,8 +21,8 @@
   <h4>Quick start</h4>
 
   <p>
-    If you have imported the module successfully to your application you should be able to create the gauge (or
-    analog-stick) simply by
+    If you have imported the module successfully to your application you should
+    be able to create the gauge (or analog-stick) simply by
   </p>
 
   <pre class="code">
@@ -28,7 +31,8 @@
   >
 
   <p>
-    In the gauge section you can customize and live-preview all the input parameters and copy and paste the code output.
-    Same goes for the analog stick.
+    In the gauge section you can customize and live-preview all the input
+    parameters and copy and paste the code output. Same goes for the analog
+    stick.
   </p>
 </div>
