--- a/apps/docs/src/app/components/nav-list/nav-list.component.html
+++ b/apps/docs/src/app/components/nav-list/nav-list.component.html
@@ -1,7 +1,11 @@
 <mat-nav-list (click)="closeSidenav()">
   <mat-list-item routerLink="/installation">Installation</mat-list-item>
   <mat-divider></mat-divider>
-  <mat-list-item *ngFor="let widget of widgets" [routerLink]="['/widgets', widget.id]" routerLinkActive="active">
+  <mat-list-item
+    *ngFor="let widget of widgets"
+    [routerLink]="['/widgets', widget.id]"
+    routerLinkActive="active"
+  >
     {{ widget.name }}
   </mat-list-item>
   <mat-divider></mat-divider>
