--- a/apps/docs/src/app/components/widget/widget.component.html
+++ b/apps/docs/src/app/components/widget/widget.component.html
@@ -7,8 +7,14 @@
       <b>{{ widget?.name }} input bindings</b><br />
       value: {{ value$ | async | json }}<br /><br />
       <mat-form-field color="accent">
-        <mat-select placeholder="Theme" [value]="themes && themes[0]" (selectionChange)="usePreset($event.value)">
-          <mat-option *ngFor="let theme of themes" [value]="theme">{{ theme.name }}</mat-option>
+        <mat-select
+          placeholder="Theme"
+          [value]="themes && themes[0]"
+          (selectionChange)="usePreset($event.value)"
+        >
+          <mat-option *ngFor="let theme of themes" [value]="theme">{{
+            theme.name
+          }}</mat-option>
         </mat-select>
       </mat-form-field>
 
@@ -16,7 +22,12 @@
         <mat-tab-group mat-stretch-tabs color="accent">
           <mat-tab *ngFor="let tab of widget?.tabs" [label]="tab.label">
             <mat-form-field color="accent" *ngFor="let field of tab.fields">
-              <input matInput [placeholder]="field" autocomplete="off" [formControlName]="field" />
+              <input
+                matInput
+                [placeholder]="field"
+                autocomplete="off"
+                [formControlName]="field"
+              />
             </mat-form-field>
           </mat-tab>
         </mat-tab-group>
@@ -27,13 +38,13 @@
 
 <div>
   <h4>Import</h4>
-  <pre class="code mat-elevation-z1">import &#123; {{ widget?.module }} &#125; from 'pro-widgets'</pre>
+  <pre class="code mat-elevation-z1">
+import &#123; {{ widget?.module }} &#125; from 'pro-widgets'</pre>
 </div>
 
 <div>
   <h4>Code</h4>
   <pre class="code mat-elevation-z1">
 &lt;pro-{{ id }}{{ codeFromForm }}&gt;
-&lt;/pro-{{ id }}&gt;</pre
-  >
+&lt;/pro-{{ id }}&gt;</pre>
 </div>
