--- a/libs/pro-widgets/src/lib/gauge/gauge.component.html
+++ b/libs/pro-widgets/src/lib/gauge/gauge.component.html
@@ -30,18 +30,63 @@
 			C35.134,187.819,64.389,227.075,105.34,241.948z"
     />
     <g id="stripes">
-      <path fill="none" stroke="#FFFFFF" stroke-miterlimit="10" d="M50,141.73" />
-      <path fill="none" stroke="#FFFFFF" stroke-miterlimit="10" d="M32.468,141.729" />
-      <path fill="none" stroke="#FFFFFF" stroke-miterlimit="10" d="M248.326,141.73" />
-      <path fill="none" stroke="#FFFFFF" stroke-miterlimit="10" d="M230.793,141.729" />
-      <path fill="none" stroke="#FFFFFF" stroke-miterlimit="10" d="M141.73,51" />
-      <path fill="none" stroke="#FFFFFF" stroke-miterlimit="10" d="M141.73,35.134" />
-      <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="0" y1="141.7295" x2="141.2559" y2="141.7295">
+      <path
+        fill="none"
+        stroke="#FFFFFF"
+        stroke-miterlimit="10"
+        d="M50,141.73"
+      />
+      <path
+        fill="none"
+        stroke="#FFFFFF"
+        stroke-miterlimit="10"
+        d="M32.468,141.729"
+      />
+      <path
+        fill="none"
+        stroke="#FFFFFF"
+        stroke-miterlimit="10"
+        d="M248.326,141.73"
+      />
+      <path
+        fill="none"
+        stroke="#FFFFFF"
+        stroke-miterlimit="10"
+        d="M230.793,141.729"
+      />
+      <path
+        fill="none"
+        stroke="#FFFFFF"
+        stroke-miterlimit="10"
+        d="M141.73,51"
+      />
+      <path
+        fill="none"
+        stroke="#FFFFFF"
+        stroke-miterlimit="10"
+        d="M141.73,35.134"
+      />
+      <linearGradient
+        id="SVGID_1_"
+        gradientUnits="userSpaceOnUse"
+        x1="0"
+        y1="141.7295"
+        x2="141.2559"
+        y2="141.7295"
+      >
         <stop offset="0" [style]="gradientBackgroundColor" />
         <stop offset="0.1133" [style]="gradientStripeColor" />
         <stop offset="0.7734" [style]="gradientBackgroundColor" />
       </linearGradient>
-      <line fill="none" stroke="url(#SVGID_1_)" stroke-miterlimit="10" x1="141.256" y1="141.729" x2="0" y2="141.73" />
+      <line
+        fill="none"
+        stroke="url(#SVGID_1_)"
+        stroke-miterlimit="10"
+        x1="141.256"
+        y1="141.729"
+        x2="0"
+        y2="141.73"
+      />
 
       <linearGradient
         id="SVGID_2_"
@@ -275,7 +320,10 @@
     </g>
   </g>
   <g id="bottom">
-    <polygon [attr.fill]="backgroundColor" points="141.732,141.731 241.948,241.948 41.512,241.948 	" />
+    <polygon
+      [attr.fill]="backgroundColor"
+      points="141.732,141.731 241.948,241.948 41.512,241.948 	"
+    />
     <rect x="111.347" y="205" fill="#9B9B9A" width="60.769" height="25.574" />
   </g>
   <g id="zeiger">
