--- a/apps/docs/src/app/components/contributing/contributing.component.html
+++ b/apps/docs/src/app/components/contributing/contributing.component.html
@@ -1,20 +1,28 @@
 <h2>Contributing</h2>
 
 <p>
-  All forms of contributions are welcome. Hand in widget ideas, bug reports, or feature requests. If there are more then
-  me contributing to this lib, I consider creating a contributors section.
+  All forms of contributions are welcome. Hand in widget ideas, bug reports, or
+  feature requests. If there are more then me contributing to this lib, I
+  consider creating a contributors section.
 </p>
 
 <h3>Developer Guidelines</h3>
 
-If you want to create a new widget create a feature request first. If it is a widget request:
+If you want to create a new widget create a feature request first. If it is a
+widget request:
 
 <ol>
-  <li>Create the widget in the <b>/projects/pro-widgets/src/lib/WIDGETID</b></li>
+  <li>
+    Create the widget in the <b>/projects/pro-widgets/src/lib/WIDGETID</b>
+  </li>
   <li>The widget has to be a component containing the SVG in the template</li>
-  <li>Create a module for the widget which declares and exports the component</li>
+  <li>
+    Create a module for the widget which declares and exports the component
+  </li>
   <li>Get inspirations about data-bindings from the existing widgets</li>
-  <li>Create meaningful unit tests (some are missing for existing components yet)</li>
+  <li>
+    Create meaningful unit tests (some are missing for existing components yet)
+  </li>
   <li>Export the widget module in the <b>./pro.module.ts</b></li>
   <li>Export the component and the module in the <b>public_api.ts</b></li>
 </ol>
@@ -23,21 +31,22 @@ Creating docs for the widget:
 
 <ol>
   <li>run <b>run npm build:widgets</b></li>
-  <li>Create an entry in the <b>./src/app/data/widgets/</b> folder (orientate on existing ones)</li>
-  <li>Create at least one theme for your widget in <b>./src/app/data/themes</b></li>
+  <li>
+    Create an entry in the <b>./src/app/data/widgets/</b> folder (orientate on
+    existing ones)
+  </li>
+  <li>
+    Create at least one theme for your widget in <b>./src/app/data/themes</b>
+  </li>
 </ol>
 
 <h2>Sponsoring</h2>
 
-<p>
-  If you like to, you can also become a sponsor of this library.
-</p>
+<p>If you like to, you can also become a sponsor of this library.</p>
 
 <h2>Buy me a coffee</h2>
 
-<p>
-  If you want to support the work I do, you can buy me a coffee.
-</p>
+<p>If you want to support the work I do, you can buy me a coffee.</p>
 <style>
   .bmc-button img {
     width: 27px !important;
@@ -79,12 +88,15 @@ Creating docs for the widget:
     opacity: 0.85 !important;
     color: #000000 !important;
   }</style
-><link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" /><a
+><link
+  href="https://fonts.googleapis.com/css?family=Cookie"
+  rel="stylesheet"
+/><a
   class="bmc-button"
   target="_blank"
   href="https://www.buymeacoffee.com/R25KP408t"
-  ><img src="https://www.buymeacoffee.com/assets/img/BMC-btn-logo.svg" alt="Buy me a coffee" /><span
-    style="margin-left:5px"
-    >Buy me a coffee</span
-  ></a
+  ><img
+    src="https://www.buymeacoffee.com/assets/img/BMC-btn-logo.svg"
+    alt="Buy me a coffee"
+  /><span style="margin-left:5px">Buy me a coffee</span></a
 >
