--- a/libs/pro-widgets/src/lib/digital-gauge/digital-gauge.component.html
+++ b/libs/pro-widgets/src/lib/digital-gauge/digital-gauge.component.html
@@ -10,7 +10,13 @@
   xml:space="preserve"
 >
   <g id="background">
-    <radialGradient id="SVGID_1_" cx="141.73" cy="141.73" r="141.7305" gradientUnits="userSpaceOnUse">
+    <radialGradient
+      id="SVGID_1_"
+      cx="141.73"
+      cy="141.73"
+      r="141.7305"
+      gradientUnits="userSpaceOnUse"
+    >
       <stop offset="0" [style]="gradientInnerColor" />
       <stop offset="1" [style]="gradientOuterColor" />
     </radialGradient>
@@ -760,7 +766,14 @@
       {{ unit }}
     </text>
   </g>
-  <linearGradient id="SVGID_3_" gradientUnits="userSpaceOnUse" x1="70.8662" y1="180.3569" x2="212.5981" y2="180.3569">
+  <linearGradient
+    id="SVGID_3_"
+    gradientUnits="userSpaceOnUse"
+    x1="70.8662"
+    y1="180.3569"
+    x2="212.5981"
+    y2="180.3569"
+  >
     <stop offset="0" style="stop-color:rgba(0,0,0,0)" />
     <stop offset="0.5" [style]="gradientUnderlineColor" />
     <stop offset="1" style="stop-color:rgba(0,0,0,0)" />
