--- a/apps/docs/src/app/components/home/home.component.html
+++ b/apps/docs/src/app/components/home/home.component.html
@@ -14,6 +14,7 @@
         backgroundColor="#212121"
         unit="m/s"
         stripeColor="#868686"
+        interpolationRate="0.05"
       ></pro-gauge>
     </div>
     <div class="description">
