docs: import mat-icons, use partly randomized/sin widget input

--- a/apps/docs/src/app/components/titlebar/titlebar.component.html
+++ b/apps/docs/src/app/components/titlebar/titlebar.component.html
@@ -2,5 +2,6 @@
   <a routerLink="/"
     ><button mat-icon-button><img src="./assets/icon.png" /></button></a
   >Widgets <span class="spacer"></span>
+  <a href="https://npmjs.com/package/pro-widgets">v0.7.2</a>
   <a href="https://github.com/ngfelixl/pro-widgets">Github</a>
 </mat-toolbar>
